data/derived/comb/progs/unify/prog2908.ml.out
Characters 204-207:
  | Average(x,y) -> "((" ^ exprToString(x) ^ "+" exprToString(y) ^ ")/2)"
                                             ^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
